--- a/tests/apispec.yml
+++ b/tests/apispec.yml
@@ -433,7 +433,6 @@ let api = [
                 TMyText: String
               }
             },
-<<<<<<< HEAD
                 response:{
                 statusCode: Number,
                 error: Object
@@ -454,83 +453,88 @@ let api = [
                 error: Object
             },
 
-              {
-                description: 'Get My Pic using its id',
-                request:{
-                  method: 'get',
-                  url: '/rest/lmypic/:id',
-                  params: ['id']
-                },
-                response:{
-                  content:{
-                    LMyPic: Number
-                  }
-                }
-              },
-              {
-                description: 'Get My Pic Size using its id',
-                request:{
-                  method: 'get',
-                  url: '/rest/lmypic/:id',
-                  params: ['id']
-                },
-                response:{
-                  content:{
-                    LMyPicSize: Number
-                  }
-                }
-              },
-
-              {
-        description: 'Get card information using its id',
+      {
+        description: 'Create My Pic',
         request:{
-          method: 'get',
-          url: '/rest/card/:id',
-          params: ['id']
+          method: 'post',
+          url: '/rest/lmypic',
+          body:{
+            LMyPic: Number,
+          }
         },
         response:{
-          content:{
-            id: Number,
-            CFirstname: String,
-            CLastName: String,
-            CBetAlt: String,
-            CAdress: {String, Number, String, String},
-            CCardNumber: Number,
-            CCardCCV: Number,
-            CCardDate: Number,
-          }
+          statusCode: Number,
+          error: Object
         }
       },
+      {
+        description: 'Create My Pic',
+        request:{
+          method: 'put',
+          url: '/rest/lmypic/:id',
+          params: ['id']
+          body:{
+            LMyPic: Number
+          }
+        },
+        response:{
+          statusCode: Number,
+          error: Object
+        }
+      },
+        {
+          description: 'Get My Pic Size using its id',
+          request:{
+            method: 'get',
+            url: '/rest/lmypicsize/:id',
+            params: ['id']
+          },
+          response:{
+            content:{
+            LMyPicSize: Number 
+            }
+          }
+        },
+        {
+          description: 'Delete My Pic using its id',
+          request:{
+            method: 'delete',
+            url: '/rest/lmypic/:id',
+            params: ['id']
+          },
+          response:{
+            statusCode: Number,
+            error: Object
+          }
+        },
+
+        {
+          description: 'Get Pre Pic using its id',
+          request:{
+            method: 'get',
+            url: '/rest/lprepic/:id',
+            params: ['id']
+          },
+          response:{
+            content:{
+            LPrePic: Number
+            }
+          }
+        },
+
+        {
+          description: 'Get Pre Pic Size using its id',
+          request:{
+            method: 'get',
+            url: '/rest/lprepicsize/:id',
+            params: ['id']
+          },
+          response:{
+            content:{
+            LPrePicSize: Number
+            }
+          }
+        },
+
   
   ]
-=======
-                response:{
-                statusCode: Number,
-                error: Object
-            }
-          },
-            {
-              description: 'Create self written text',
-              request:{
-              method: 'put',
-              url: '/rest/mytext/:id',
-               params: ['id']
-              body:{
-              TMyText: String
-            }
-          },
-              response:{
-                statusCode: Number,
-                error: Object
-            }
-              {
-                description: 'Get the self written text',
-                request:{
-                  method: 'get',
-                  url: '/rest/mytext',
-                  content:{
-                  TMyText: String
-                }
-  
-  ]     
->>>>>>> c86caa5d789258b7849039275a9a4769a616c31d
